# plugin-baselithbot

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  DOCUMENTATION.md  LICENSE  README.md  SECURITY.md  __init__.py  _bootstrap.py  _mcp.py  agent.py  approvals.py  catalog-info.yaml  chat_commands.py  cli.py  computer_tools.py  computer_use.py  cron.py  cron_custom.py  desktop_agent.py  desktop_vision.py  doctor.py  extra_tools.py  filesystem.py  handlers.py  http_pool.py  js_whitelist.py  manifest.json  manifest.yaml  metrics.py  model_config.py  models.py  ollama_probe.py  openclaw_tools.py  os_control.py  plugin.py  process_manager.py  (+21 more)
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml
.state/: .secret_key  model_preferences.json  provider_keys.enc.json  workspaces.json
agents/: __init__.py  custom.py  registry.py  router.py
api/: handlers.py  router.py  ui_api.py
browser/: agent.py  http_pool.py  js_whitelist.py  stealth.py  tools.py  vision_failover.py  web_launcher.py
canvas/: __init__.py  a2ui.py  builders.py  surface.py  widgets_extra.py
channels/: __init__.py  base.py  bluebubbles.py  bootstrap.py  config_store.py  discord.py  feishu.py  generic.py  google_chat.py  imessage.py  irc.py  line.py  matrix.py  mattermost.py  microsoft_teams.py  nextcloud_talk.py  nostr.py  qq.py  registry.py  signal.py  slack.py  synology_chat.py  telegram.py  tlon.py  twitch.py  webchat.py  wechat.py  whatsapp.py  zalo.py
chat/: commands.py  slash_defaults.py
code_edit/: __init__.py  ast_refactor.py  diff.py  multi_file.py  patcher.py  search_replace.py
computer_use/: config.py  desktop_lane.py  desktop_vision.py  extra_tools.py  filesystem.py  os_control.py  process_manager.py  shell_exec.py  spotify_control.py  tools.py
config/: runtime.py
control/: approvals.py  openclaw_tools.py
cron/: custom.py  scheduler.py
dashboard/: __init__.py  app.py  bus.py  schemas.py  security.py  session_driver.py
dashboard/routes/: __init__.py  agents.py  approvals.py  audit.py  canvas.py  channels.py  computer_use.py  desktop.py  diagnostics.py  events.py  models.py  provider_keys.py  registry.py  replay.py  run_task.py  sessions.py  stealth.py  workspaces.py
deploy/: __init__.py
deploy/docker/: Dockerfile  docker-compose.yml
deploy/launchd/: com.baselith.baselithbot.plist
deploy/systemd/: baselithbot.service
desktop_agent/: __init__.py  agent.py  decision.py  models.py  policy.py  prompt.py
diagnostics/: cli.py  doctor.py
docs/: README.md  approvals.md  architecture.md  cli-sdk.md  computer-use.md  configuration.md  dashboard.md  http-api.md  installation.md  mcp-tools.md  models.md  observability.md  operations.md  publishing.md  replay.md  security.md  set-of-mark.md  skills.md  subsystems.md
gateway/: __init__.py  ssh.py  tailscale.py  tailscale_provisioning.py
inbound/: __init__.py  auth.py  default_handler.py  dispatcher.py  parsers.py  signatures.py  verify.py
integrations/: __init__.py  gmail_pubsub.py  webhooks.py
model_routing/: __init__.py  auth_rotation.py  failover.py  router.py
nodes/: __init__.py  commands.py  pairing.py
observability/: hooks.py  tracing.py  usage.py
policies/: __init__.py  dashboard_auth.py  dm_policy.py  host_acl.py  rate_limit.py
security/: secret_store.py
sessions/: __init__.py  manager.py  sandbox.py
skills/: __init__.py  bundled.py  clawhub.py  loader.py  registry.py  writer.py
ui/: .gitignore  index.html  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.ts
ui/.tsbuild-node/: tsconfig.node.tsbuildinfo  vite.config.js
ui/src/: App.tsx  main.tsx
ui/src/components/: ConfirmProvider.tsx  DashboardProvider.tsx  DetailDrawer.tsx  EmptyState.tsx  ErrorBoundary.tsx  Layout.tsx  ModelCombobox.tsx  PageHeader.tsx  Panel.tsx  ProviderKeyEditor.tsx  Sidebar.tsx  Skeleton.tsx  StatCard.tsx  ToastProvider.tsx  TopBar.tsx  useOverlayA11y.ts
ui/src/lib/: api.ts  format.ts  icons.tsx  sse.ts
ui/src/lib/api/: client.ts  endpoints.ts  index.ts
ui/src/lib/api/types/: canvas.ts  core.ts  desktop.ts  index.ts
ui/src/pages/: Agents.tsx  Approvals.tsx  AuditLog.tsx  Canvas.tsx  Channels.tsx  ComputerUse.tsx  Crons.tsx  DesktopTask.tsx  Doctor.tsx  Logs.tsx  Metrics.tsx  Models.tsx  Nodes.tsx  NotFound.tsx  Overview.tsx  Replay.tsx  RunTask.tsx  Sessions.tsx  Skills.tsx  Stealth.tsx  Workspaces.tsx
ui/src/pages/Agents/: components.tsx  helpers.ts  index.tsx
ui/src/pages/Agents/sections/: AgentDetails.tsx  AgentRoster.tsx  CustomAgentForm.tsx
ui/src/pages/Approvals/: components.tsx  helpers.ts  index.tsx
ui/src/pages/Approvals/sections/: HeroPanel.tsx  HistoryList.tsx  PendingQueue.tsx  PolicyPanels.tsx  RequestDrawer.tsx  StatGrid.tsx
ui/src/pages/Canvas/: components.tsx  helpers.ts  index.tsx
ui/src/pages/Canvas/sections/: CanvasWidgetView.tsx  FormPreview.tsx
ui/src/pages/Channels/: helpers.ts  index.tsx
ui/src/pages/Channels/sections/: ChannelEditor.tsx  ChannelRegistry.tsx  ChannelStats.tsx
ui/src/pages/ComputerUse/: helpers.ts  index.tsx
ui/src/pages/ComputerUse/sections/: CapabilityMatrixSection.tsx  GuardrailsSection.tsx  HeroSection.tsx  RiskReviewSection.tsx  StatsSection.tsx  ToolSurfaceSection.tsx
ui/src/pages/Crons/: components.tsx  helpers.ts  index.tsx
ui/src/pages/Crons/sections/: CronDetailDrawer.tsx  CronJobList.tsx  (+1 more)
ui/src/pages/DesktopTask/: constants.ts  helpers.ts  index.tsx  shared.ts
ui/src/pages/Metrics/: components.tsx  helpers.ts  index.tsx
ui/src/pages/Replay/: components.tsx  helpers.ts  index.tsx
ui/src/pages/RunTask/: components.tsx  helpers.ts  index.tsx
ui/src/pages/Sessions/: components.tsx  helpers.ts  index.tsx
ui/src/pages/Skills/: helpers.ts  index.tsx
ui/src/pages/Stealth/: helpers.ts  index.tsx
ui/src/styles/: base.css  components.css  layout.css  tokens.css
voice/: __init__.py  audio_capture.py  elevenlabs.py  tts.py  wake.py
workspace/: __init__.py  config.py
(+32 files in other folders)
